/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.0.1/samples
 */

plugins {
    id 'com.github.ben-manes.versions' version '0.39.0'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'com.adarshr.test-logger' version '3.0.0'
}

test {
    useJUnitPlatform()
}


dependencies {
    implementation 'info.picocli:picocli:4.6.1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.8'

}

application {
    mainClass = 'hexlet.code.App'
}
compileJava {
    options.release = 16
}

repositories {
    mavenCentral()
}
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

testlogger {
    showStandardStreams true
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
}

checkstyle {
    toolVersion '9.0'
}

// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind


group = 'hexlet.code'
version = '1.0-SNAPSHOT'